--- a/package.json
+++ b/package.json
@@ -10,19 +10,22 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "node-sass": "^4.12.0",
-    "sass-loader": "^7.1.0",
+    "resolve-url": "^0.2.1",
+    "sass": "^1.22.12",
+    "sass-loader": "^7.3.1",
+    "three": "^0.108.0",
     "vue": "^2.6.10",
-    "vue-loader": "^15.7.0",
-    "vue-router": "^3.0.3"
+    "vue-loader": "^15.7.1",
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.8.0",
-    "@vue/cli-plugin-eslint": "^3.8.0",
-    "@vue/cli-service": "^3.8.0",
+    "@vue/cli-plugin-babel": "^3.11.0",
+    "@vue/cli-plugin-eslint": "^3.11.0",
+    "@vue/cli-service": "^3.11.0",
     "@vue/eslint-config-prettier": "^4.0.1",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "eslint-plugin-vue": "^5.2.3",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
