--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/vue-fontawesome": "^0.1.7",
     "core-js": "^2.6.5",
+    "emailjs-com": "^2.4.0",
     "node-sass": "^4.12.0",
     "resolve-url": "^0.2.1",
     "sass": "^1.22.12",
